--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:7
+    image: redis:latest
     container_name: dict_redis
     restart: always
     ports:
       - "6379:6379"
 
-  dev_app:
+  dict_dev_app:
     build:
       context: .
       dockerfile: Dockerfile
@@ -28,13 +28,8 @@ services:
     depends_on:
       - postgres
       - redis
-    environment:
-      DATABASE_HOST: postgres
-      DATABASE_PORT: 5432
-      DATABASE_USER: postgres
-      DATABASE_PASS: postgres
-      DATABASE_NAME: dict_db
-      REDIS_HOST: redis
+    env_file:
+      - .env  
 
 volumes:
   postgres_data:
